# proctor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  action.yml
.cargo/: config.toml
.github/: release-notes.md
.github/workflows/: ci.yml  demo.yml  release.yml  site.yml  swebench.yml
corpus/: README.md  RESULTS.md
corpus/real-tasks/: NOTICE  run-report.sh  run-swebench-report.sh
corpus/real-tasks/log-summary-date-ranges/: .source-commit
corpus/real-tasks/swebench/: psf__requests-2317.json  sympy__sympy-13647.json
crates/proctor-adapter-swebench/: Cargo.toml
crates/proctor-adapter-swebench/src/: lib.rs
crates/proctor-adapter-tb/: Cargo.toml
crates/proctor-adapter-tb/src/: lib.rs  rootfs.rs
crates/proctor-cli/: Cargo.toml  build.rs
crates/proctor-cli/src/: main.rs  run.rs
crates/proctor-cli/tests/: bundle_e2e_test.rs  corpus_test.rs  e2e_test.rs  env_binding_test.rs  net_e2e_test.rs  swebench_test.rs  tb_test.rs
crates/proctor-grader/: Cargo.toml
crates/proctor-grader/src/: lib.rs
crates/proctor-grader/tests/: grade_net_test.rs  grade_test.rs
crates/proctor-monitor/: Cargo.toml
crates/proctor-monitor/src/: chain.rs  classify.rs  event.rs  lib.rs  supervisor.rs
crates/proctor-policy/: Cargo.toml
crates/proctor-policy/src/: lib.rs
crates/proctor-sandbox/: Cargo.toml
crates/proctor-sandbox/src/: caps.rs  cgroup.rs  gitsan.rs  init.rs  ipc.rs  lib.rs  materialize.rs  mounts.rs  net.rs  ociroot.rs  pid1.rs  proxy.rs  seccomp.rs  spawn.rs  spec.rs
crates/proctor-sandbox/tests/: gitsan_test.rs  mask_test.rs  monitor_test.rs  net_allow_test.rs  net_deny_test.rs  net_host_test.rs  ociroot_test.rs  spawn_test.rs
crates/proctor-verdict/: Cargo.toml
crates/proctor-verdict/src/: bundle.rs  digest.rs  lib.rs  sign.rs  verdict.rs
crates/proctor-verdict/tests/: verdict_test.rs
docs/: bundle-spec.md  usage.md
docs/examples/: README.md  sample-bundle.json
docs/marketing/: README.md  faq.md  launch-announcement.md  one-pager.md  why-proctor.md
docs/reports/: 2026-06-10-real-task-log-summary.md  2026-06-10-real-task-swebench.md  2026-06-12-swebench-grading-pinned.md  2026-06-12-swebench-grading.md
docs/research/: 2026-06-09-viability-research.md
docs/superpowers/plans/: 2026-06-09-proctor-v1.md  2026-06-10-swebench-adapter.md  2026-06-11-github-action.md  2026-06-11-grader-network.md  2026-06-11-run-bundle.md  2026-06-12-docker-rootfs.md  2026-06-12-release-packaging.md  2026-06-12-swebench-grading.md  2026-06-21-env-binding.md  2026-06-25-website.md
docs/superpowers/specs/: 2026-06-09-proctor-design.md  2026-06-09-proctor-viability-review.md  2026-06-10-swebench-adapter-design.md  2026-06-11-github-action-design.md  2026-06-11-grader-network-design.md  2026-06-11-run-bundle-design.md  2026-06-12-docker-rootfs-design.md  2026-06-12-release-packaging-design.md  2026-06-12-swebench-grading-design.md  2026-06-21-env-binding-design.md  2026-06-25-website-design.md  2026-07-02-real-agent-leg1-design.md
scripts/: action-smoke.sh  assemble-swebench-demo.sh  assemble-tb-task.sh  dev-setup.sh
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt
site/src/content/docs/blog/: benchmark-cheating-dies-by-construction.md
site/src/content/docs/docs/: bundle-spec.md  example-bundle.md  faq.md  honest-scope.md  how-it-works.md  overview.md  quickstart.md  roadmap.md
site/src/pages/: index.astro
site/src/styles/: custom.css
