[package]
name = "proctor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "proctor"
path = "src/main.rs"

[dependencies]
proctor-policy.workspace = true
proctor-monitor.workspace = true
proctor-sandbox.workspace = true
proctor-grader.workspace = true
proctor-verdict.workspace = true
proctor-adapter-tb.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
