[package]
name = "proctor-grader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proctor-policy.workspace = true
proctor-sandbox.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
