[package]
name = "proctor-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proctor-policy.workspace = true
proctor-monitor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nix.workspace = true
libc.workspace = true
libseccomp.workspace = true
tempfile.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
