[package]
name = "proctor-verdict"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_json_canonicalizer.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
proctor-monitor.workspace = true
